--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,20 @@
 {
   "compilerOptions": {
+    "target": "ES2020",
+    "lib": ["DOM", "DOM.Iterable", "ES2020"],
+
     "jsx": "react-jsx",
-    "allowJs": true,
-    "checkJs": true,
+
     "noEmit": true,
     "skipLibCheck": true,
+
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "esModuleInterop": true, // ✅ ADD THIS LINE
-    "allowSyntheticDefaultImports": true, // ✅ OPTIONAL BUT RECOMMENDED
+
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
